Correción en un combo

--- a/CRUD-Alumnos/Views/Alumno/Editar.cshtml
+++ b/CRUD-Alumnos/Views/Alumno/Editar.cshtml
@@ -75,4 +75,7 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        $("#CodCiudad").val("@Model.CodCiudad");
+    </script>
 }
